@@ -103,7 +103,7 @@ processor_settings:
     fields:
       - rendered_item
       - title
-  node_status:
+  entity_status:
     weights:
       preprocess_index: -10
   rendered_item:
